// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled button-vars button-color-primary root size-36 mode-solid color-sky size-36 style-square fill-white size-30"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
/>
`;

exports[`PageButton should be rendered correctly with extra 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable button-vars button-color-sun root size-24 mode-ghost color-sun size-24 style-square fill-light size-24"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="uui-caption line-height-18 font-size-12 v-padding-2"
  >
    1
  </div>
</button>
`;
